# configurator-ghc-blowup

./: .gitignore  README.md  configurator-ghc-blowup.cabal  stack.yaml
app/: Main.hs
